--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "react-homework-template",
+  "name": "react-practice-01-quotes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://lechinal.github.io/react-practice-01-quotes/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
