--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^6.0.0",
     "react": "^18.1.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.3"
   },
